Make an android (ant) project as well as the ndk project.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.example.native_activity"
-        android:versionCode="1"
-        android:versionName="1.0">
+      package="uk.me.jandj.native_perl"
+      android:versionCode="1"
+      android:versionName="1.0">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk android:minSdkVersion="9" />
@@ -27,4 +26,3 @@
     </application>
 
 </manifest> 
-<!-- END_INCLUDE(manifest) -->
